# software-validation-toolchain

./: .gitignore  ADDING_ESBMC.md  DAFNY_SYSTEM_SUMMARY.md  DATASETS_FOR_NL_TO_FORMAL_SPECS.md  EXAMPLE.md  Makefile  NIX_SETUP.md  PIPELINE_README.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README_DAFNY.md  REPRODUCTION_GUIDE.md  _spin_nvr.tmp  analyze_results.py  debug_binary  explore_benchmark.py  flake.nix  fuzz_target  install-tools.sh  llm-2-acsl.py  main.py  opencode.json  pan  pan.b  pan.c  pan.h  pan.m  pan.t  proc.pml  proc.pml.trail  pyproject.toml  pyrightconfig.json  requirements.txt  result  run_all_tools.sh  shell.nix  test.c  test_dafny_system.sh  verify_benchmark.py  (+1 more)
docs/: BENCHMARKS.md  BENCHMARK_QUICK_REFERENCE.md  BENCHMARK_SOURCES.md  COMPARISON.md  EVALUATION_METHODOLOGY.md  NL_TO_VERIFICATION.md  QUICK_START_NL.md  TESTING_WITH_VERICODING.md  VERICODING_COMPARISON.md  VERICODING_TEST_CONFIRMED.md  system-architecture.md
envs/SPIN/: Dockerfile  example_mutex.pml  (+1 more)
nl2ltl/: pyproject.toml
paper/: Makefile  README.md  main.tex
results/: main.bc  target.bc
scripts/: comprehensive_evaluation.py  extract_vericoding_nl.py  generate_nl_benchmark.py  generate_report.py  llm_to_acsl.py  nl_interactive.py  nl_verify.py  query_relaxed_with_feedback.py  query_with_feedback.py  requirements_analyzer.py  run_benchmarks.py  test_benchmarks.sh  test_vericoding_benchmarks.py  verify.py
src/: __init__.py  acsl_generator.py  examples.py  framac_runner.py  main.py  pipeline.py  promela_generator.py  spin_runner.py  test_pipeline.py  types.py
(+78 files in other folders)
