[project]
name = "software-validation-toolchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.11"
dependencies = [
  "anthropic==0.75.0",
  "black==25.12.0",
  "instructor==1.13.0",
  "langchain==1.2.0",
  "langchain-openai==1.1.6",
  "mypy==1.19.1",
  "nltk==3.9.2",
  "openai==2.14.0",
  "pydantic==2.12.5",
  "pytest==9.0.2",
  "requests==2.32.5",
  "spacy==3.8.11",
]
